Prevent tree entries from wrapping when space is limited; scroll instead. When window is smaller than the page, allow it to scroll all the way up & left to see the full page.

--- a/static/style.css
+++ b/static/style.css
@@ -11,12 +11,8 @@ div#container {
 	height: 100%;
 }
 
-/* TODO: if nav tree is too narrow, menu entries wrap; should put up scroll bar instead */
-/* TODO: page layout is broken for facing pages on a small monitor: scroll bar doesn't scroll all the way left */
 /* TODO: scrolling views do not center clicked page on small screens */
 /* TODO: grid customization dialog is ugly */
-/* TODO: If context menu pops up partially off screen, scroll bars are added; they shouldn't be */
-/* TODO: Nav tree top button should *not* scroll */
 /* TODO: When selected item changes, nav tree should auto-scroll so selected item is in view */
 /* TODO: Why is there an extra 6px under each el-color-picker?
 /* TODO: brick color picker refuses to have variable width columns */
@@ -325,6 +321,11 @@ ul {
 
 .oddNumberedPage {
 	margin-left: 40px;
+}
+
+.pageViewContainer {
+	max-width: 90%;
+	max-height: 90%;
 }
 
 .pageContainer {
